--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-	<div>
+<!-- 	<div>
 		<h2>my favorite repos</h2>
 		<p><a href="#t3patterson">Travis H</a></p>
 		<p><a href="#matthiasak">Matt Keas</a></p>
 		<p><a href="#jwo">J Wo</a></p>
 		<p><a href="#lacewaves">Caroline</a></p>
-	</div>
+	</div> -->
 
 
 	<div id="bodyContainer" class="align-children">
@@ -46,6 +46,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<!-- <script src="js/routing-ex.js.js" ></script> -->
 <script src="js/script.js" ></script>
 
  </body>
