working page with search and hash

--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 </head>
 <body>
 
-<!-- 	<div>
+	<!-- <div>
 		<h2>my favorite repos</h2>
 		<p><a href="#t3patterson">Travis H</a></p>
 		<p><a href="#matthiasak">Matt Keas</a></p>
 		<p><a href="#jwo">J Wo</a></p>
 		<p><a href="#lacewaves">Caroline</a></p>
 	</div> -->
+
+	<div>
+		
+		<a href="#home">Home</a>
+
+	</div>
 
 
 	<div id="bodyContainer" class="align-children">
@@ -22,8 +28,6 @@
 
 				<span class="mega-octicon octicon-mark-github"></span>
 
-				<!-- <span class="mega-octicon octicon-logo-github"></span>
-				 -->
 				<input class="searchInput" type="text">
 
 			</div>
